--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "assert": "^2.1.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -11,8 +13,14 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
+    "os-browserify": "^0.3.0",
     "path": "^0.12.7",
+    "pg-hstore": "^2.3.4",
+    "querystring-es3": "^0.2.1",
+    "readable-stream": "^4.5.2",
     "sequelize": "^6.35.2",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
     "winston": "^3.11.0"
   },
   "name": "mysql---api---json",
