--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "dependencies": {
     "assert": "^2.1.0",
-    "bcrypt": "^5.1.1",
+    "async_hooks": "^1.0.0",
     "body-parser": "^1.20.2",
+    "browserify-fs": "^1.0.0",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "JSONStream": "^1.3.5",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
+    "net-browserify": "^0.2.4",
     "nodemon": "^3.0.2",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "pg-hstore": "^2.3.4",
-    "querystring-es3": "^0.2.1",
-    "readable-stream": "^4.5.2",
+    "querystring": "^0.2.1",
     "sequelize": "^6.35.2",
+    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
+    "util": "^0.12.5",
     "winston": "^3.11.0"
   },
   "name": "mysql---api---json",
